# supabase-recon

./: .gitignore  README.md  pyproject.toml
supabase_recon/: __init__.py  cli.py  deep_scanner.py  models.py  patterns.py  reporter.py  scanner.py
